# go/inline_response_200_1.go
@@ -8,26 +8,11 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
-package main
+package swagger
 
-import (
-	"log"
-	"net/http"
+type InlineResponse2001 struct {
 
-	// WARNING!
-	// Change this to a fully-qualified import path
-	// once you place this file into your project.
-	// For example,
-	//
-	//    sw "github.com/myname/myrepo/go"
-	//
-	sw "./go"
-)
+	RecordId string `json:"recordId"`
 
-func main() {
-	log.Printf("Server started")
-
-	router := sw.NewRouter()
-
-	log.Fatal(http.ListenAndServe(":8080", router))
+	VersionId string `json:"versionId"`
 }
