# go/inline_response_200_3.go
@@ -8,26 +8,13 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
-package main
+package swagger
 
-import (
-	"log"
-	"net/http"
+type InlineResponse2003 struct {
 
-	// WARNING!
-	// Change this to a fully-qualified import path
-	// once you place this file into your project.
-	// For example,
-	//
-	//    sw "github.com/myname/myrepo/go"
-	//
-	sw "./go"
-)
+	RecordId string `json:"recordId,omitempty"`
 
-func main() {
-	log.Printf("Server started")
+	VersionId string `json:"versionId,omitempty"`
 
-	router := sw.NewRouter()
-
-	log.Fatal(http.ListenAndServe(":8080", router))
+	FileGrps []InlineResponse2003FileGrps `json:"fileGrps,omitempty"`
 }
