# go/inline_response_200_3_file_grps.go
@@ -8,26 +8,11 @@
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 
-package main
+package swagger
 
-import (
-	"log"
-	"net/http"
+type InlineResponse2003FileGrps struct {
 
-	// WARNING!
-	// Change this to a fully-qualified import path
-	// once you place this file into your project.
-	// For example,
-	//
-	//    sw "github.com/myname/myrepo/go"
-	//
-	sw "./go"
-)
+	FileGrp string `json:"fileGrp,omitempty"`
 
-func main() {
-	log.Printf("Server started")
-
-	router := sw.NewRouter()
-
-	log.Fatal(http.ListenAndServe(":8080", router))
+	FileIds []InlineResponse2003FileIds `json:"fileIds,omitempty"`
 }
